--- a/index.css
+++ b/index.css
@@ -894,3 +894,105 @@ html>body {
 footer {
   margin-top: 50px;
 }
+
+/* 팝업창 */
+/* 팝업레이어 */
+.popup1 {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 680vh;
+  display: none;
+  position: absolute;
+  z-index: 9999;
+}
+
+.popup-box-wrap {
+  position: absolute;
+  top: 4%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.content-area {
+  padding: 10px 15px;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+  width: 400px;
+  height: 400px;
+  background-image: url(http://suflux.com/web/popup/bn_230120_2.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.content-area::selection {
+  background-color: lemonchiffon;
+}
+
+.btn-area {
+  height: 38px;
+  display: flex;
+  justify-content: left;
+  padding: 0 15px;
+  user-select: none;
+}
+
+.btn-area>.todays {
+  position: relative;
+  top: 12px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.btn-area>.todays>#today {
+  margin-right: 12px;
+  width: 24px;
+  height: 24px;
+}
+
+.btn-area>.closeBtn {
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -6px;
+  right: 14px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: 2px solid white;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.btn-area>.closeBtn:hover {
+  background-color: #013eff;
+  color: white;
+  border: none;
+}
+
+/* 체크박스 */
+[type="checkbox"] {
+  width: 18px;
+  height: 18px;
+  appearance: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  outline: 0;
+}
+
+[type="checkbox"]:checked {
+  background-color: #013eff;
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+  border: 0;
+}
